Simpler mastodon config

--- a/nginx/sites/mastodon.conf
+++ b/nginx/sites/mastodon.conf
@@ -14,21 +14,12 @@ upstream mastodon_streaming {
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
 
 server {
-  listen 7011 ssl http2;
-  listen [::]:7011 ssl http2;
-  server_name notclickable.social;
+  listen 7010;
+  listen [::]:7010;
+  server_name notclickable.social www.notclickable.social;
 
   access_log /var/log/nginx/notclickable.social.access.logs;
   error_log /var/log/nginx/notclickable.social.error.logs;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
-
-  ssl_certificate /etc/letsencrypt/live/notclickable.social/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/notclickable.social/privkey.pem;
 
   keepalive_timeout 70;
   sendfile on;
@@ -152,24 +143,4 @@ server {
   }
 
   error_page 404 500 501 502 503 504 /500.html;
-}
-
-server {
-  listen 7011 ssl http2;
-  listen [::]:7011 ssl http2;
-  server_name www.notclickable.social;
-
-  access_log /var/log/nginx/notclickable.social.access.logs;
-  error_log /var/log/nginx/notclickable.social.error.logs;
-
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
-
-  ssl_certificate /etc/letsencrypt/live/notclickable.social/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/notclickable.social/privkey.pem;
-
-  return 301 https://notclickable.social$request_uri;
 }
