--- a/nginx/sites/mastodon.conf
+++ b/nginx/sites/mastodon.conf
@@ -4,22 +4,56 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream mastodon_backend {
-  server localhost:8012 fail_timeout=0;
+  server 192.168.1.11:8012 fail_timeout=0;
 }
 
 upstream mastodon_streaming {
-  server localhost:8013 fail_timeout=0;
+  server 192.168.1.11:8013 fail_timeout=0;
 }
 
 proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=CACHE:10m inactive=7d max_size=1g;
 
 server {
-  listen 7010;
-  listen [::]:7010;
+  listen 80;
+  listen [::]:80;
   server_name notclickable.social www.notclickable.social;
+  root /home/mastodon/live/public;
 
   access_log /var/log/nginx/notclickable.social.access.logs;
   error_log /var/log/nginx/notclickable.social.error.logs;
+
+  location ^~ /.well-known/acme-challenge/ {
+    allow all;
+    root /var/www/certbot;
+  }
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+
+    return 301 https://$host$request_uri;
+  }
+}
+
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name notclickable.social;
+
+  access_log /var/log/nginx/notclickable.social.access.logs;
+  error_log /var/log/nginx/notclickable.social.error.logs;
+
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off;
+
+  ssl_certificate /etc/letsencrypt/live/notclickable.social/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/notclickable.social/privkey.pem;
 
   keepalive_timeout 70;
   sendfile on;
@@ -143,4 +177,24 @@ server {
   }
 
   error_page 404 500 501 502 503 504 /500.html;
+}
+
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name www.notclickable.social;
+
+  access_log /var/log/nginx/notclickable.social.access.logs;
+  error_log /var/log/nginx/notclickable.social.error.logs;
+
+  ssl_protocols TLSv1.2 TLSv1.3;
+  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+  ssl_prefer_server_ciphers on;
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_tickets off;
+
+  ssl_certificate /etc/letsencrypt/live/notclickable.social/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/notclickable.social/privkey.pem;
+
+  return 301 https://notclickable.social$request_uri;
 }
