Fixed other service configs Removed unused service configs

--- a/nginx/sites/authelia.conf
+++ b/nginx/sites/authelia.conf
@@ -1,21 +1,21 @@
-server {
-    listen 80;
-    listen [::]:80;
-    server_name auth.starbase80.dev;
+# server {
+#     listen 80;
+#     listen [::]:80;
+#     server_name auth.starbase80.dev;
 
-    access_log /var/log/nginx/auth.starbase80.dev.access.logs;
-    error_log /var/log/nginx/auth.starbase80.dev.error.logs;
+#     access_log /var/log/nginx/auth.starbase80.dev.access.logs;
+#     error_log /var/log/nginx/auth.starbase80.dev.error.logs;
 
-    location ^~ /.well-known/acme-challenge/ {
-        allow all;
-        root /var/www/certbot;
-    }
+#     location ^~ /.well-known/acme-challenge/ {
+#         allow all;
+#         root /var/www/certbot;
+#     }
 
-    location / {
-        # proxy_pass http://10.10.10.70:9091;
-        return 301 https://$host$request_uri;
-    }
-}
+#     location / {
+#         # proxy_pass http://10.10.10.70:9091;
+#         return 301 https://$host$request_uri;
+#     }
+# }
 
 server {
     listen 443 ssl http2;
