--- a/nginx/sites/portainer.conf
+++ b/nginx/sites/portainer.conf
@@ -1,63 +1,63 @@
-upstream portainer_backend {
-  server 192.168.1.11:8160;
-}
+# upstream portainer_backend {
+#   server 192.168.1.11:8160;
+# }
 
-server {
-  listen 80;
-  server_name portainer.starbase80.dev;
+# server {
+#   listen 80;
+#   server_name portainer.starbase80.dev;
 
-  access_log /var/log/nginx/portainer.starbase80.dev.access.logs;
-  error_log /var/log/nginx/portainer.starbase80.dev.error.logs;
+#   access_log /var/log/nginx/portainer.starbase80.dev.access.logs;
+#   error_log /var/log/nginx/portainer.starbase80.dev.error.logs;
 
-  location ^~ /.well-known/acme-challenge {
-    allow all;
-    root /var/www/certbot;
-  }
+#   location ^~ /.well-known/acme-challenge {
+#     allow all;
+#     root /var/www/certbot;
+#   }
 
-  location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
+#   location / {
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_set_header Host $http_host;
+#     proxy_set_header X-NginX-Proxy true;
 
-    # proxy_pass http://portainer_backend;
-    return 301 https://$host$request_uri;
-  }
-}
+#     # proxy_pass http://portainer_backend;
+#     return 301 https://$host$request_uri;
+#   }
+# }
 
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name portainer.starbase80.dev;
+# server {
+#   listen 443 ssl http2;
+#   listen [::]:443 ssl http2;
+#   server_name portainer.starbase80.dev;
 
-  access_log /var/log/nginx/portainer.starbase80.dev.access.logs;
-  error_log /var/log/nginx/portainer.starbase80.dev.error.logs;
+#   access_log /var/log/nginx/portainer.starbase80.dev.access.logs;
+#   error_log /var/log/nginx/portainer.starbase80.dev.error.logs;
 
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
-  ssl_prefer_server_ciphers on;
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_tickets off;
+#   ssl_protocols TLSv1.2 TLSv1.3;
+#   ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+#   ssl_prefer_server_ciphers on;
+#   ssl_session_cache shared:SSL:10m;
+#   ssl_session_tickets off;
 
-  ssl_certificate /etc/letsencrypt/live/portainer.starbase80.dev/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/portainer.starbase80.dev/privkey.pem;
+#   ssl_certificate /etc/letsencrypt/live/portainer.starbase80.dev/fullchain.pem;
+#   ssl_certificate_key /etc/letsencrypt/live/portainer.starbase80.dev/privkey.pem;
 
-  include /etc/nginx/snippets/authelia-location.conf;
+#   include /etc/nginx/snippets/authelia-location.conf;
 
-  location ^~ /.well-known/acme-challenge {
-    allow all;
-    root /var/www/certbot;
-  }
+#   location ^~ /.well-known/acme-challenge {
+#     allow all;
+#     root /var/www/certbot;
+#   }
 
-  location / {
-    include /etc/nginx/snippets/proxy.conf;
-    include /etc/nginx/snippets/authelia-authrequest.conf;
+#   location / {
+#     include /etc/nginx/snippets/proxy.conf;
+#     include /etc/nginx/snippets/authelia-authrequest.conf;
 
-    # Websockets
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
+#     # Websockets
+#     proxy_set_header Upgrade $http_upgrade;
+#     proxy_set_header Connection $connection_upgrade;
 
-    proxy_pass http://portainer_backend;
-  }
-}
+#     proxy_pass http://portainer_backend;
+#   }
+# }
