--- a/nginx/sites/woodpecker.conf
+++ b/nginx/sites/woodpecker.conf
@@ -2,29 +2,29 @@ upstream woodpecker_backend {
   server 192.168.1.11:8101;
 }
 
-server {
-  listen 80;
-  server_name woodpecker.starbase80.dev;
+# server {
+#   listen 80;
+#   server_name woodpecker.starbase80.dev;
 
-  access_log /var/log/nginx/woodpecker.starbase80.dev.access.logs;
-  error_log /var/log/nginx/woodpecker.starbase80.dev.error.logs;
+#   access_log /var/log/nginx/woodpecker.starbase80.dev.access.logs;
+#   error_log /var/log/nginx/woodpecker.starbase80.dev.error.logs;
 
-  location ^~ /.well-known/acme-challenge {
-    allow all;
-    root /var/www/certbot;
-  }
+#   location ^~ /.well-known/acme-challenge {
+#     allow all;
+#     root /var/www/certbot;
+#   }
 
-  location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
+#   location / {
+#     proxy_set_header X-Real-IP $remote_addr;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header X-Forwarded-Proto $scheme;
+#     proxy_set_header Host $http_host;
+#     proxy_set_header X-NginX-Proxy true;
 
-    # proxy_pass http://woodpecker_backend;
-    return 301 https://$host$request_uri;
-  }
-}
+#     # proxy_pass http://woodpecker_backend;
+#     return 301 https://$host$request_uri;
+#   }
+# }
 
 server {
   listen 443 ssl http2;
