--- a/n8n/compose.yml
+++ b/n8n/compose.yml
@@ -1,12 +1,12 @@
 services:
   n8n:
-    image: docker.n8n.io/n8nio/n8n:0.222.1
+    image: docker.n8n.io/n8nio/n8n
     container_name: n8n
     ports:
       - 8140:5678
     volumes:
       - data:/home/node/.n8n
-    restart: always
+    restart: unless-stopped
 
 volumes:
   data:
