--- a/romm/compose.yml
+++ b/romm/compose.yml
@@ -16,6 +16,8 @@ services:
     image: redis:7-alpine
     container_name: romm_redis
     restart: "unless-stopped"
+    ports:
+      - 8231:6379
     healthcheck:
       test: [ 'CMD', 'redis-cli', 'ping' ]
 
