Added websockets for VSCode Fixed N8N port

--- a/nginx/sites/vscode.conf
+++ b/nginx/sites/vscode.conf
@@ -54,6 +54,10 @@ server {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
 
+    # Websockets
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $connection_upgrade;
+
     proxy_pass http://vscode_backend;
   }
 }
