--- a/homepage/config.json
+++ b/homepage/config.json
@@ -33,6 +33,12 @@
 				"icon": "/icons/gitea.svg"
 			},
 			{
+				"name": "Gramps",
+				"uri": "https://gramps.starbase80.dev",
+				"description": "Genealogy",
+				"icon": "gramps"
+			},
+			{
 				"name": "Jellyfin",
 				"uri": "http://starbase-80:8030",
 				"description": "Media server",
