Added Gramps to backup Also an icon

--- a/homepage/config.json
+++ b/homepage/config.json
@@ -36,7 +36,7 @@
 				"name": "Gramps",
 				"uri": "https://gramps.starbase80.dev",
 				"description": "Genealogy",
-				"icon": "gramps"
+				"icon": "/icons/gramps.jpg"
 			},
 			{
 				"name": "Jellyfin",
