--- a/homepage/config.json
+++ b/homepage/config.json
@@ -117,6 +117,12 @@
 				"icon": "/icons/wallabag.png"
 			},
 			{
+				"name": "Wastebin",
+				"uri": "https://wastebin.starbase80.dev",
+				"description": "Pastebin",
+				"icon": "/icons/wastebin.png"
+			},
+			{
 				"name": "Woodpecker",
 				"uri": "https://woodpecker.starbase80.dev",
 				"description": "Continuous integration",
