--- a/homepage/config.json
+++ b/homepage/config.json
@@ -120,7 +120,7 @@
 				"name": "Wastebin",
 				"uri": "https://wastebin.starbase80.dev",
 				"description": "Pastebin",
-				"icon": "/icons/wastebin.png"
+				"icon": "/icons/wastebin.jpg"
 			},
 			{
 				"name": "Woodpecker",
