--- a/wastebin/compose.yml
+++ b/wastebin/compose.yml
@@ -3,6 +3,7 @@ services:
     image: quxfoo/wastebin:latest
     container_name: wastebin
     environment:
+      - WASTEBIN_TITLE=Wastebin
       - WASTEBIN_DATABASE_PATH=/data/state.db
     ports:
       - 8250:8088
