Commented out more

--- a/nginx/sites/lemmy.conf
+++ b/nginx/sites/lemmy.conf
@@ -52,7 +52,7 @@ server {
 
   location / {
     # Exposing Lemmy publicly by commenting out Authelia's validation
-    include /etc/nginx/snippets/proxy.conf;
+    # include /etc/nginx/snippets/proxy.conf;
     # include /etc/nginx/snippets/authelia-authrequest.conf;
 
     proxy_pass http://lemmy_backend;
