Using unless-stopped for restart values Adding a postgres database for Authelia Moving Authelia to a database backend

--- a/calibre/compose.yml
+++ b/calibre/compose.yml
@@ -13,7 +13,7 @@ services:
       - /mnt/synology/downloads/Calibre:/books
     ports:
       - 8170:8083
-    restart: always
+    restart: unless-stopped
 
 volumes:
   config:
