--- a/gitea/compose.yml
+++ b/gitea/compose.yml
@@ -3,7 +3,7 @@ services:
     image: alpine:3.17.2
     container_name: gitea_backup
     entrypoint: "tail -f /dev/null"
-    restart: always
+    restart: unless-stopped
     volumes:
       - data:/data:ro
       - db:/var/lib/postgresql/data:ro
@@ -13,7 +13,7 @@ services:
     image: gitea/gitea:1.20
     container_name: gitea
     env_file: env.gitea
-    restart: always
+    restart: unless-stopped
     volumes:
       - data:/data
     ports:
@@ -23,7 +23,7 @@ services:
     image: postgres:alpine
     container_name: gitea_db
     env_file: env.db
-    restart: always
+    restart: unless-stopped
     volumes:
       - db:/var/lib/postgresql/data
     expose:
@@ -32,7 +32,7 @@ services:
   woodpecker-server:
     image: woodpeckerci/woodpecker-server:v1.0.2-alpine
     container_name: gitea_woodpecker
-    restart: always
+    restart: unless-stopped
     env_file: env.woodpecker
     depends_on:
       - gitea
@@ -46,7 +46,7 @@ services:
     container_name: gitea_woodpecker_agent
     env_file: env.woodpecker_agent
     command: agent
-    restart: always
+    restart: unless-stopped
     depends_on:
       - woodpecker-server
     volumes:
