--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: homepage
     ports:
       - 8090:4173
-    restart: always
+    restart: unless-stopped
     environment:
       - TITLE=Starbase 80
       - LOGO=/logo.png
