--- a/mastodon/compose.yml
+++ b/mastodon/compose.yml
@@ -3,7 +3,7 @@ services:
     image: alpine:3.17.2
     container_name: mastodon_backup
     entrypoint: "tail -f /dev/null"
-    restart: always
+    restart: unless-stopped
     volumes:
       - web:/mastodon/public/system:ro
       - redis:/data:ro
@@ -12,7 +12,7 @@ services:
   db:
     image: postgres:14-alpine
     container_name: mastodon_db
-    restart: always
+    restart: unless-stopped
     env_file: env.postgres
     shm_size: 256mb
     networks:
@@ -25,7 +25,7 @@ services:
   redis:
     image: redis:7-alpine
     container_name: mastodon_redis
-    restart: always
+    restart: unless-stopped
     networks:
       - internal_network
     healthcheck:
@@ -36,7 +36,7 @@ services:
   web:
     image: tootsuite/mastodon:v4.1.6
     container_name: mastodon_web
-    restart: always
+    restart: unless-stopped
     env_file: env.production
     command: bash -c "rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000"
     networks:
@@ -62,7 +62,7 @@ services:
   streaming:
     image: tootsuite/mastodon:v4.1.6
     container_name: mastodon_streaming
-    restart: always
+    restart: unless-stopped
     env_file: env.production
     command: node ./streaming
     networks:
@@ -86,7 +86,7 @@ services:
   sidekiq:
     image: tootsuite/mastodon:v4.1.6
     container_name: mastodon_sidekiq
-    restart: always
+    restart: unless-stopped
     env_file: env.production
     command: bundle exec sidekiq
     depends_on:
