--- a/shamir/compose.yml
+++ b/shamir/compose.yml
@@ -4,4 +4,4 @@ services:
         container_name: shamir
         ports:
             - 8200:80
-        restart: always
+        restart: unless-stopped
