--- a/vscode/compose.yml
+++ b/vscode/compose.yml
@@ -10,7 +10,7 @@ services:
       - config:/config
     ports:
       - 8120:8443
-    restart: always
+    restart: unless-stopped
 
 volumes:
   config:
