--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -31,6 +31,8 @@ services:
     container_name: switchboard_authelia_postgres
     restart: unless-stopped
     env_file: env.db
+    expose:
+      - 5432
     volumes:
       - authelia_db:/var/lib/postgresql/data
 
