--- a/hackershare/compose.yml
+++ b/hackershare/compose.yml
@@ -1,7 +1,7 @@
 services:
   backup:
     image: alpine:3.17.2
-    container_name: gitea_backup
+    container_name: hackershare_backup
     entrypoint: "tail -f /dev/null"
     restart: unless-stopped
     volumes:
@@ -11,9 +11,11 @@ services:
   base: &base
     image: hooopo/hackershare:latest
     env_file: env.hackershare
+    container_name: hackershare
 
   rails:
     <<: *base
+    container_name: hackershare_rails
     depends_on:
       - postgres
       - redis
@@ -27,6 +29,7 @@ services:
 
   sidekiq:
     <<: *base
+    container_name: hackershare_sidekiq
     depends_on:
       - postgres
       - redis
@@ -37,6 +40,7 @@ services:
 
   postgres:
     image: hooopo/pg12-zhparser-rum
+    container_name: hackershare_postgres
     restart: always
     ports:
       - 8271:5432
@@ -46,6 +50,7 @@ services:
 
   redis:
     image: redis:alpine
+    container_name: hackershare_redis
     restart: always
     volumes:
       - redis:/data
