--- a/hackershare/compose.yml
+++ b/hackershare/compose.yml
@@ -24,6 +24,7 @@ services:
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
+      - SECRET_KEY_BASE=test123
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
 
@@ -36,6 +37,7 @@ services:
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
+      - SECRET_KEY_BASE=test123
     command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
 
   postgres:
