--- a/hackershare/compose.yml
+++ b/hackershare/compose.yml
@@ -21,10 +21,7 @@ services:
       - redis
     ports:
       - 8270:3000
-    environment:
-      - NODE_ENV=production
-      - RAILS_ENV=production
-      - SECRET_KEY_BASE=test123
+    env_file: env.rails
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
 
@@ -34,10 +31,7 @@ services:
     depends_on:
       - postgres
       - redis
-    environment:
-      - NODE_ENV=production
-      - RAILS_ENV=production
-      - SECRET_KEY_BASE=test123
+    env_file: env.rails
     command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
 
   postgres:
