--- a/homepage/config.json
+++ b/homepage/config.json
@@ -84,7 +84,7 @@
 				"name": "Outline",
 				"uri": "https://outline.starbase80.dev",
 				"description": "Documentation",
-				"icon": "/icons/outline.jpg"
+				"icon": "/icons/outline.png"
 			},
 			{
 				"name": "Portainer",
