--- a/lemmy/compose.yml
+++ b/lemmy/compose.yml
@@ -29,7 +29,7 @@ services:
       - lemmy-ui
 
   lemmy:
-    image: dessalines/lemmy:latest
+    image: dessalines/lemmy:0.18.5
     container_name: lemmy
     hostname: lemmy
     restart: unless-stopped
@@ -43,7 +43,7 @@ services:
       - pictrs
 
   lemmy-ui:
-    image: dessalines/lemmy-ui:latest
+    image: dessalines/lemmy-ui:0.18.5
     container_name: lemmy_ui
     env_file: env.lemmy-ui
     volumes:
