Trying GitLab CE

--- a/gitlab/compose.yml
+++ b/gitlab/compose.yml
@@ -1,14 +1,13 @@
 version: '3.6'
 services:
   web:
-    image: gitlab/gitlab-ee:latest
+    image: gitlab/gitlab-ce:latest
     container_name: gitlab
     restart: always
     hostname: 'gitlab.starbase80.dev'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'https://gitlab.starbase80.dev'
-        # Add any other gitlab.rb configuration here, each on its own line
     ports:
       - 8280:80
     volumes:
