--- a/gitlab/compose.yml
+++ b/gitlab/compose.yml
@@ -11,12 +11,7 @@ services:
     ports:
       - 8280:80
     volumes:
-      - config:/etc/gitlab
-      - logs:/var/log/gitlab
-      - data:/var/opt/gitlab
+      - '$GITLAB_HOME/config:/etc/gitlab'
+      - '$GITLAB_HOME/logs:/var/log/gitlab'
+      - '$GITLAB_HOME/data:/var/opt/gitlab'
     shm_size: '256m'
-
-volumes:
-  config:
-  logs:
-  data:
