--- a/gitlab/compose.yml
+++ b/gitlab/compose.yml
@@ -1,4 +1,3 @@
-version: '3.6'
 services:
   web:
     image: gitlab/gitlab-ce:latest
@@ -7,7 +6,7 @@ services:
     hostname: 'gitlab.starbase80.dev'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://gitlab.starbase80.dev'
+        external_url 'localhost:80'
     ports:
       - 8280:80
     volumes:
