--- a/n8n/compose.yml
+++ b/n8n/compose.yml
@@ -2,6 +2,7 @@ services:
   n8n:
     image: docker.n8n.io/n8nio/n8n
     container_name: n8n
+    env_file: env.n8n
     ports:
       - 8060:5678
     volumes:
