--- a/standardnotes/compose.yml
+++ b/standardnotes/compose.yml
@@ -32,7 +32,7 @@ services:
       - uploads:/opt/bundled/files/packages/files/dist/uploads
 
   localstack:
-    image: localstack/localstack:1.3
+    image: localstack/localstack
     container_name: standardnotes_localstack
     expose:
       - 4566
