--- a/homepage/config.json
+++ b/homepage/config.json
@@ -15,6 +15,12 @@
 				"icon": "/icons/calibre.jpg"
 			},
 			{
+				"name": "Chatwoot",
+				"uri": "https://chatwoot.starbase80.dev",
+				"description": "Customer chat",
+				"icon": "chatwoot"
+			},
+			{
 				"name": "Draw.io",
 				"uri": "https://draw.starbase80.dev",
 				"description": "Graphs and charts",
