Double dollar signs

--- a/chatwoot/compose.yml
+++ b/chatwoot/compose.yml
@@ -57,7 +57,7 @@ services:
     container_name: chatwoot_redis
     restart: always
     env_file: redis.env
-    command: ["sh", "-c", "redis-server --requirepass ${REDIS_PASSWORD}"]
+    command: ["sh", "-c", "redis-server --requirepass $${REDIS_PASSWORD}"]
     volumes:
       - redis:/data
     ports:
