--- a/chatwoot/compose.yml
+++ b/chatwoot/compose.yml
@@ -20,6 +20,7 @@ services:
       - redis
     ports:
       - 8290:3000
+    restart: always
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
@@ -30,6 +31,7 @@ services:
   sidekiq:
     image: chatwoot/chatwoot:latest
     env_file: chatwoot.env
+    restart: always
     volumes:
       - storage:/app/storage
     container_name: chatwoot_sidekiq
