Removed unhelpful Wallabag DB health check

--- a/wallabag/compose.yml
+++ b/wallabag/compose.yml
@@ -32,10 +32,10 @@ services:
     restart: always
     volumes:
       - data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      interval: 20s
-      timeout: 3s
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+    #   interval: 20s
+    #   timeout: 3s
 
   redis:
     image: redis:alpine
