Hyphens not underscores

--- a/nginx/sites/otln-minio.conf
+++ b/nginx/sites/otln-minio.conf
@@ -4,7 +4,7 @@ upstream otln_minio_backend {
 
 server {
   listen 80;
-  server_name otln_minio.starbase80.dev;
+  server_name otln-minio.starbase80.dev;
 
   access_log /var/log/nginx/otln_minio.starbase80.dev.access.logs;
   error_log /var/log/nginx/otln_minio.starbase80.dev.error.logs;
@@ -29,7 +29,7 @@ server {
 # server {
 #   listen 443 ssl http2;
 #   listen [::]:443 ssl http2;
-#   server_name otln_minio.starbase80.dev;
+#   server_name otln-minio.starbase80.dev;
 
 #   access_log /var/log/nginx/otln_minio.starbase80.dev.access.logs;
 #   error_log /var/log/nginx/otln_minio.starbase80.dev.error.logs;
