--- a/nginx/sites/otln-minio.conf
+++ b/nginx/sites/otln-minio.conf
@@ -54,7 +54,7 @@ server {
     include /etc/nginx/snippets/proxy.conf;
     include /etc/nginx/snippets/authelia-authrequest.conf;
 
-    Websockets
+    # Websockets
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
 
