--- a/outline/compose.yml
+++ b/outline/compose.yml
@@ -74,9 +74,9 @@ services:
   #     /bin/sh -c "
   #     /usr/bin/mc config host rm local;
   #     /usr/bin/mc config host add local http://storage:9000 ACCESS_KEY SECRET_KEY;
-  #     /usr/bin/mc rm -r --force local/outline;
-  #     /usr/bin/mc mb -p local/outline;
-  #     /usr/bin/mc anonymous set download local/outline;
+  #     /usr/bin/mc rm -r --force local/otln-minio;
+  #     /usr/bin/mc mb -p local/otln-minio;
+  #     /usr/bin/mc anonymous set download local/otln-minio;
   #     "
   #   environment:
   #     - MC_HOST=storage
